src/math_ops/snapshots/rbx_types_ops__math_ops__color3uint8__color3uint8_div_color3uint8.snap
---
source: src/math_ops/color3uint8.rs
expression: "Color3uint8::new(255, 128, 51).div(&Color3uint8::new(255, 128, 51).into())"
---
Color3uint8:
  - 1
  - 1
  - 1
