src/math_ops/snapshots/rbx_types_ops__math_ops__color3uint8__color3uint8_floor_div_f32.snap
---
source: src/math_ops/color3uint8.rs
expression: "Color3uint8::new(255, 128, 51).floor_div(&16.2f32.into())"
---
Color3uint8:
  - 15
  - 7
  - 3
